<resources>
    <string name="app_name">God Of Burguer Externo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="insumos">Insumos</string>
    <string name="lanches">Lanches</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="clientes">Clientes</string>
    <string name="indicadores">Indicadores</string>
    <string name="satisfacao">Satisfação</string>
    <string name="atendimento_cliente">Atendimento ao Cliente</string>
    <string name="qualidade">Qualidade</string>
    <string name="qualidade_lanche">Qualidade do lanche servido</string>
    <string name="agilidade">Agilidade</string>
    <string name="tempo_entrega">Tempo de entrega dos pedidos</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="nome">Nome</string>
    <string name="informe_nome">Informe o nome</string>
    <string name="gravar">Gravar</string>
    <string name="cancelar">Cancelar</string>
    <string name="informe_o_endereco">Informe o endereço</string>
    <string name="endereco">Endereço</string>
    <string name="informe_o_email">Informe o email</string>
    <string name="email">Email</string>
    <string name="informe_o_telefone">Informe o telefone</string>
    <string name="telefone">"Telefone"</string>
    <string name="validate_senha">Informe a senha</string>
    <string name="validate_user">Informe o usuário</string>
    <string name="informe_endereco">Informe o endereço</string>
    <string name="informe_telefone">Informe o telefone</string>
    <string name="informe_email">Informe o email</string>
    <string name="valor">Valor</string>
    <string name="informe_valor">Informe o valor</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="promocoes_dia">Promoções do Dia</string>
    <string name="avaliacao">Avaliação</string>
    <string name="nao_tem_login">Não tem Login? Cadastre-se</string>
    <string name="informe_login">Informe o login</string>
    <string name="informe_senha">Informe a senha</string>
    <string name="enviar">Enviar</string>
    <string name="promocoes">Promoções</string>
    <string name="avaliar">Avaliar</string>
    <string name="editar_perdil">Editar Perfil</string>
    <string name="sobre">Sobre</string>
    <string name="como_chegar">Como chegar</string>
    <string name="fale_conosco">Email</string>
    <string name="sobre_descricao_loja">Lanchonete <i>God Of Burger©</i>\nFone: (48) 99999-9999</string>
    <string name="sobre_descricao_final">Aplicativo desenvolvido para disciplina de Programação para dispositivos móveis.\n\n<b>Acadêmicos</b>: Adriel Cardoso, Alcino Nuno José, Ana Claudia Medeiros, Gustavo Fabro, Rafael Silva.</string>
    <string name="a_partir_de">A partir de</string>
    <string name="adicionar_carrinho">Adicionar no Carrinho</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="valor_unitario">Valor Unitário</string>
    <string name="valor_total">Valor Total</string>
    <string name="total">Total</string>
    <string name="observacao">Observação</string>
    <string name="hamburguer_mega_man">Hambúrguer Mega Man Prime</string>
    <string name="hamburguer_bacon">Hambúrguer Sonic Bacon Supremo</string>
    <string name="costela">Combo Kratos Supreme Costela</string>
    <string name="combo">Combo HeadShot Barbecue</string>
</resources>
