<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edtNome"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_nome"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edtEndereco"
            android:inputType="textAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_o_endereco"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edtTelefone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_o_telefone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edtEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_o_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_senha"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnGravarUsuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/gravar" />

            <Button
                android:id="@+id/btnCancelarCadUsuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancelar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
