<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome"/>

            <EditText
                android:id="@+id/editNomeLanche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/informe_nome"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor"/>

            <EditText
                android:id="@+id/editValorLanche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/informe_valor"
                android:inputType="numberDecimal"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGravar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/gravar" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/cancelar"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>