<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/editUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:layout_marginTop="15dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/entrar"
            android:layout_marginTop="35dp"
            android:background="@color/btn_color"/>

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:text="@string/sair"
            android:layout_marginTop="10dp"
            android:background="@color/btn_color"/>
    </LinearLayout>

</ScrollView>