<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/sobre_descricao_loja"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/sobre_descricao_final"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/butons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/como_chegar_logo"
                    android:layout_width="40dp"
                    android:layout_height="70dp"
                    android:src="@mipmap/como_chegar"
                    android:scaleType="fitXY"
                    android:background="@null"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="14dp" />

                <TextView
                    android:id="@+id/como_chegar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/como_chegar_logo"
                    android:text="@string/como_chegar" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/email"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:src="@mipmap/fale_conosco" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@+id/email"
                    android:layout_marginLeft="5dp"
                    android:text="@string/fale_conosco" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>