<?xml version="1.0" encoding="utf-8"?>

<!--Rafael Silva-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardSatisfacao"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/indicadores"
                    android:textColor="@color/black"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/titulo_card"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/satisfacao"
                    android:textColor="@color/black"
                    android:textSize="25dp"/>

                <TextView
                    android:id="@+id/descricao_card"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atendimento_cliente"
                    android:textColor="@color/black"
                    android:textSize="18dp"/>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn1"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_star"
                        android:tag="1"
                        android:onClick="teste"
                        />

                    <ImageButton
                        android:id="@+id/btn2"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_star"
                        android:tag="2"/>

                    <ImageButton
                        android:id="@+id/btn3"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_star"
                        android:tag="3"/>

                    <ImageButton
                        android:id="@+id/btn4"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_star"
                        android:tag="4"/>

                    <ImageButton
                        android:id="@+id/btn5"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_star"
                        android:tag="5"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>